deploy/kubernetes/grafana.yaml
# 1. Deployment para Grafana
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
---
# 2. Service para exponer Grafana
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: grafana
  type: LoadBalancer # Para acceder a Grafana desde fuera del clúster
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
